@@ -1,2 +1,7 @@
 # Perspective-Crop
 Trying to do the perspective crop effect selecting 4 points and transforming the image changing its perspective
+
+To edit the source code (at least on eclipse) you need to: 
+* Install openCV and JavaFx libraries
+* Add them to the project
+* Add argument to java run config -> VM -> --module-path "javafx lib path" --add-modules javafx.controls,javafx.fxml
